[ADD] Chapter001. RAG Overview

--- a/001_RAG_overview/001_basic_implementation.ipynb
+++ b/001_RAG_overview/001_basic_implementation.ipynb
@@ -52,13 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def call_llm_with_full_text(itext):\n",
     "    text_input = '\\n'.join(itext)\n",
-    "    prompt = f\"Please elaborate on the following content and translate the result:\\n{text_input}\"\n",
+    "    prompt = f\"\"\"\n",
+    "    Please elaborate on the following content and translate the result in \"KOREAN\":\\n{text_input}\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        response = client.chat.completions.create(\n",
     "            model=gptmodel,\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +100,171 @@
     "    print(\"-\" * 20)\n",
     "    print(wrapped_text)\n",
     "    print(\"-\" * 20 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_records = [\n",
+    "    \"Retrieval Augmented Generation (RAG) represents a sophisticated hybrid approach in the field of artificial intelligence, particularly within the realm of natural language processing (NLP).\",\n",
+    "    \"It innovatively combines the capabilities of neural network-based language models with retrieval systems to enhance the generation of text, making it more accurate, informative, and contextually relevant.\",\n",
+    "    \"This methodology leverages the strengths of both generative and retrieval architectures to tackle complex tasks that require not only linguistic fluency but also factual correctness and depth of knowledge.\",\n",
+    "    \"At the core of Retrieval Augmented Generation (RAG) is a generative model, typically a transformer-based neural network, similar to those used in models like GPT (Generative Pre-trained Transformer) or BERT (Bidirectional Encoder Representations from Transformers).\",\n",
+    "    \"This component is responsible for producing coherent and contextually appropriate language outputs based on a mixture of input prompts and additional information fetched by the retrieval component.\",\n",
+    "    \"Complementing the language model is the retrieval system, which is usually built on a database of documents or a corpus of texts.\",\n",
+    "    \"This system uses techniques from information retrieval to find and fetch documents that are relevant to the input query or prompt.\",\n",
+    "    \"The mechanism of relevance determination can range from simple keyword matching to more complex semantic search algorithms which interpret the meaning behind the query to find the best matches.\",\n",
+    "    \"This component merges the outputs from the language model and the retrieval system.\",\n",
+    "    \"It effectively synthesizes the raw data fetched by the retrieval system into the generative process of the language model.\",\n",
+    "    \"The integrator ensures that the information from the retrieval system is seamlessly incorporated into the final text output, enhancing the model's ability to generate responses that are not only fluent and grammatically correct but also rich in factual details and context-specific nuances.\",\n",
+    "    \"When a query or prompt is received, the system first processes it to understand the requirement or the context.\",\n",
+    "    \"Based on the processed query, the retrieval system searches through its database to find relevant documents or information snippets.\",\n",
+    "    \"This retrieval is guided by the similarity of content in the documents to the query, which can be determined through various techniques like vector embeddings or semantic similarity measures.\",\n",
+    "    \"The retrieved documents are then fed into the language model.\",\n",
+    "    \"In some implementations, this integration happens at the token level, where the model can access and incorporate specific pieces of information from the retrieved texts dynamically as it generates each part of the response.\",\n",
+    "    \"The language model, now augmented with direct access to retrieved information, generates a response.\",\n",
+    "    \"This response is not only influenced by the training of the model but also by the specific facts and details contained in the retrieved documents, making it more tailored and accurate.\",\n",
+    "    \"By directly incorporating information from external sources, Retrieval Augmented Generation (RAG) models can produce responses that are more factual and relevant to the given query.\",\n",
+    "    \"This is particularly useful in domains like medical advice, technical support, and other areas where precision and up-to-date knowledge are crucial.\",\n",
+    "    \"Retrieval Augmented Generation (RAG) systems can dynamically adapt to new information since they retrieve data in real-time from their databases.\",\n",
+    "    \"This allows them to remain current with the latest knowledge and trends without needing frequent retraining.\",\n",
+    "    \"With access to a wide range of documents, Retrieval Augmented Generation (RAG) systems can provide detailed and nuanced answers that a standalone language model might not be capable of generating based solely on its pre-trained knowledge.\",\n",
+    "    \"While Retrieval Augmented Generation (RAG) offers substantial benefits, it also comes with its challenges.\",\n",
+    "    \"These include the complexity of integrating retrieval and generation systems, the computational overhead associated with real-time data retrieval, and the need for maintaining a large, up-to-date, and high-quality database of retrievable texts.\",\n",
+    "    \"Furthermore, ensuring the relevance and accuracy of the retrieved information remains a significant challenge, as does managing the potential for introducing biases or errors from the external sources.\",\n",
+    "    \"In summary, Retrieval Augmented Generation represents a significant advancement in the field of artificial intelligence, merging the best of retrieval-based and generative technologies to create systems that not only understand and generate natural language but also deeply comprehend and utilize the vast amounts of information available in textual form.\",\n",
+    "    \"A RAG vector store is a database or dataset that contains vectorized data points.\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieval Augmented Generation (RAG) represents a sophisticated hybrid approach\n",
+      "in the field of artificial intelligence, particularly within the realm of\n",
+      "natural language processing (NLP). It innovatively combines the capabilities of\n",
+      "neural network-based language models with retrieval systems to enhance the\n",
+      "generation of text, making it more accurate, informative, and contextually\n",
+      "relevant. This methodology leverages the strengths of both generative and\n",
+      "retrieval architectures to tackle complex tasks that require not only linguistic\n",
+      "fluency but also factual correctness and depth of knowledge. At the core of\n",
+      "Retrieval Augmented Generation (RAG) is a generative model, typically a\n",
+      "transformer-based neural network, similar to those used in models like GPT\n",
+      "(Generative Pre-trained Transformer) or BERT (Bidirectional Encoder\n",
+      "Representations from Transformers). This component is responsible for producing\n",
+      "coherent and contextually appropriate language outputs based on a mixture of\n",
+      "input prompts and additional information fetched by the retrieval component.\n",
+      "Complementing the language model is the retrieval system, which is usually built\n",
+      "on a database of documents or a corpus of texts. This system uses techniques\n",
+      "from information retrieval to find and fetch documents that are relevant to the\n",
+      "input query or prompt. The mechanism of relevance determination can range from\n",
+      "simple keyword matching to more complex semantic search algorithms which\n",
+      "interpret the meaning behind the query to find the best matches. This component\n",
+      "merges the outputs from the language model and the retrieval system. It\n",
+      "effectively synthesizes the raw data fetched by the retrieval system into the\n",
+      "generative process of the language model. The integrator ensures that the\n",
+      "information from the retrieval system is seamlessly incorporated into the final\n",
+      "text output, enhancing the model's ability to generate responses that are not\n",
+      "only fluent and grammatically correct but also rich in factual details and\n",
+      "context-specific nuances. When a query or prompt is received, the system first\n",
+      "processes it to understand the requirement or the context. Based on the\n",
+      "processed query, the retrieval system searches through its database to find\n",
+      "relevant documents or information snippets. This retrieval is guided by the\n",
+      "similarity of content in the documents to the query, which can be determined\n",
+      "through various techniques like vector embeddings or semantic similarity\n",
+      "measures. The retrieved documents are then fed into the language model. In some\n",
+      "implementations, this integration happens at the token level, where the model\n",
+      "can access and incorporate specific pieces of information from the retrieved\n",
+      "texts dynamically as it generates each part of the response. The language model,\n",
+      "now augmented with direct access to retrieved information, generates a response.\n",
+      "This response is not only influenced by the training of the model but also by\n",
+      "the specific facts and details contained in the retrieved documents, making it\n",
+      "more tailored and accurate. By directly incorporating information from external\n",
+      "sources, Retrieval Augmented Generation (RAG) models can produce responses that\n",
+      "are more factual and relevant to the given query. This is particularly useful in\n",
+      "domains like medical advice, technical support, and other areas where precision\n",
+      "and up-to-date knowledge are crucial. Retrieval Augmented Generation (RAG)\n",
+      "systems can dynamically adapt to new information since they retrieve data in\n",
+      "real-time from their databases. This allows them to remain current with the\n",
+      "latest knowledge and trends without needing frequent retraining. With access to\n",
+      "a wide range of documents, Retrieval Augmented Generation (RAG) systems can\n",
+      "provide detailed and nuanced answers that a standalone language model might not\n",
+      "be capable of generating based solely on its pre-trained knowledge. While\n",
+      "Retrieval Augmented Generation (RAG) offers substantial benefits, it also comes\n",
+      "with its challenges. These include the complexity of integrating retrieval and\n",
+      "generation systems, the computational overhead associated with real-time data\n",
+      "retrieval, and the need for maintaining a large, up-to-date, and high-quality\n",
+      "database of retrievable texts. Furthermore, ensuring the relevance and accuracy\n",
+      "of the retrieved information remains a significant challenge, as does managing\n",
+      "the potential for introducing biases or errors from the external sources. In\n",
+      "summary, Retrieval Augmented Generation represents a significant advancement in\n",
+      "the field of artificial intelligence, merging the best of retrieval-based and\n",
+      "generative technologies to create systems that not only understand and generate\n",
+      "natural language but also deeply comprehend and utilize the vast amounts of\n",
+      "information available in textual form. A RAG vector store is a database or\n",
+      "dataset that contains vectorized data points.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "paragraph = ' '.join(db_records)\n",
+    "wrapped_text = textwrap.fill(paragraph, width=80)\n",
+    "print(wrapped_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response:\n",
+      "--------------------\n",
+      "To elaborate on the content \"define a RAG store,\" we need to break down the\n",
+      "components:  1. **Define**: This is an instruction to provide a clear and\n",
+      "precise explanation or description of something.  2. **RAG**: In the context of\n",
+      "technology and data, RAG often stands for \"Retrieval-Augmented Generation.\" This\n",
+      "is a method used in natural language processing where a model retrieves relevant\n",
+      "information from a database or knowledge base to generate more accurate and\n",
+      "contextually relevant responses.  3. **Store**: In this context, a \"store\"\n",
+      "refers to a place where data or information is kept. It could be a database, a\n",
+      "data warehouse, or any system designed to store and manage data.  Putting it all\n",
+      "together, \"define a RAG store\" would mean to provide a detailed explanation of a\n",
+      "system or database that is used to store information for the purpose of\n",
+      "retrieval-augmented generation. This would involve describing how the data is\n",
+      "organized, accessed, and used to enhance the generation of responses by a model.\n",
+      "Now, let's translate this explanation into Korean:  \"RAG 스토어 정의하기\"라는 내용을 자세히\n",
+      "설명하기 위해 구성 요소를 분석해 보겠습니다:  1. **정의하다**: 이는 무언가에 대한 명확하고 정확한 설명이나 정의를 제공하라는\n",
+      "지시입니다.  2. **RAG**: 기술 및 데이터의 맥락에서 RAG는 종종 \"Retrieval-Augmented Generation\"을\n",
+      "의미합니다. 이는 자연어 처리에서 모델이 데이터베이스나 지식 베이스에서 관련 정보를 검색하여 보다 정확하고 맥락에 맞는 응답을 생성하는\n",
+      "방법입니다.  3. **스토어**: 이 맥락에서 \"스토어\"는 데이터나 정보를 보관하는 장소를 의미합니다. 데이터베이스, 데이터 웨어하우스 또는\n",
+      "데이터를 저장하고 관리하도록 설계된 시스템일 수 있습니다.  이 모든 것을 종합하면, \"RAG 스토어 정의하기\"는 검색 증강 생성의 목적으로\n",
+      "정보를 저장하는 시스템이나 데이터베이스에 대한 자세한 설명을 제공하는 것을 의미합니다. 여기에는 데이터가 어떻게 조직되고, 접근되며, 모델의\n",
+      "응답 생성을 향상시키기 위해 사용되는지에 대한 설명이 포함됩니다.\n",
+      "--------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"define a RAG store\"\n",
+    "\n",
+    "llm_response = call_llm_with_full_text(query)\n",
+    "print_formatted_response(llm_response)"
    ]
   },
   {
